--- a/.github/workflows/build-static-html.yml
+++ b/.github/workflows/build-static-html.yml
@@ -15,5 +15,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: build sphinx html output
+      - name: Build sphinx html output
         run: sphinx-build -b html src/ build/
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: api-doc-html
+          path: build/
