--- a/.github/workflows/build-static-html.yml
+++ b/.github/workflows/build-static-html.yml
@@ -23,7 +23,7 @@ jobs:
           name: build
           path: build/
   push_image:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     needs: build
     env:
       IMAGE_NAME: data-api-doc
