--- a/.github/workflows/build-static-html.yml
+++ b/.github/workflows/build-static-html.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           context: .
           push: true
-          tags:
-            ${{ secrets.HARBOR_REGISTRY_URL }}/$HARBOR_PROJECT/$IMAGE_NAME:latest,
+          tags: |
+            ${{ secrets.HARBOR_REGISTRY_URL }}/$HARBOR_PROJECT/$IMAGE_NAME:latest
             ${{ secrets.HARBOR_REGISTRY_URL }}/$HARBOR_PROJECT/$IMAGE_NAME:$TAG
 
