--- a/.github/workflows/build-static-html.yml
+++ b/.github/workflows/build-static-html.yml
@@ -26,12 +26,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      IMAGE_NAME: data-api-doc
-      HARBOR_PROJECT: data-api-documentation
+      IMAGE_NAME: data-api-docs
+      HARBOR_PROJECT: data-api-docs
       # TAG : ${{ steps.meta.output.tags }}
       TAG : 0.1
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Docker login
         uses: docker/login-action@v2
         with:
@@ -42,12 +44,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build
-      - name: Build image
-        run: printf "FROM httpd:2.4-alpine\nCOPY ./build/ /usr/local/apache2/htdocs/" | docker build -t ${{ env.IMAGE_NAME }} -f - .
-      - name: Upload image
-        run: |
-          docker tag ${{ env.IMAGE_NAME }}  ${{ secrets.HARBOR_REGISTRY_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest
-          docker tag ${{ env.IMAGE_NAME }}  ${{ secrets.HARBOR_REGISTRY_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:$TAG
-          docker push ${{ secrets.HARBOR_REGISTRY_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest
-          docker push ${{ secrets.HARBOR_REGISTRY_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:$TAG
-
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: '${{ secrets.HARBOR_REGISTRY_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest ${{ secrets.HARBOR_REGISTRY_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:$ {{ env.TAG }}'
