--- a/.github/workflows/build-static-html.yml
+++ b/.github/workflows/build-static-html.yml
@@ -16,7 +16,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Build sphinx html output
-        run: sphinx-build -b html src/ build/
+        run: sphinx-build -b html src/ build/v1/docs/
       - name: Upload build artifact
         uses: actions/upload-artifact@v3
         with:
@@ -29,7 +29,7 @@ jobs:
       IMAGE_NAME: dataset-api-docs
       HARBOR_PROJECT: dataset-api-docs
       # TAG : ${{ steps.meta.output.tags }}
-      TAG: 0.1
+      TAG: 0.2
     steps:
       - uses: actions/checkout@v3
       - name: Set up Docker Buildx
