--- a/.github/workflows/build-static-html.yml
+++ b/.github/workflows/build-static-html.yml
@@ -29,7 +29,7 @@ jobs:
       IMAGE_NAME: dataset-api-docs
       HARBOR_PROJECT: dataset-api-docs
       # TAG : ${{ steps.meta.output.tags }}
-      TAG: 0.2
+      TAG: 0.3
     steps:
       - uses: actions/checkout@v3
       - name: Set up Docker Buildx
@@ -46,9 +46,11 @@ jobs:
           name: build
           path: ./build
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: '${{ secrets.HARBOR_REGISTRY_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest , ${{ secrets.HARBOR_REGISTRY_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}'
+          tags: |
+            ${{ secrets.HARBOR_REGISTRY_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest
+            ${{ secrets.HARBOR_REGISTRY_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
