--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-.github/workflows  @afuchs-geosphereat @dlang-geosphereat @fpechstein-geosphereat
+/.github/workflows  @afuchs-geosphereat @dlang-geosphereat @fpechstein-geosphereat 
