--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -68,9 +68,12 @@ sphinx==6.2.1
     #   -r requirements.in
     #   myst-parser
     #   sphinx-autobuild
+    #   sphinx-reredirects
     #   sphinx-rtd-theme
     #   sphinxcontrib-jquery
 sphinx-autobuild==2021.3.14
+    # via -r requirements.in
+sphinx-reredirects==0.1.3
     # via -r requirements.in
 sphinx-rtd-theme==1.2.0
     # via -r requirements.in
@@ -89,7 +92,9 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 tomli==2.0.1
-    # via build
+    # via
+    #   build
+    #   pyproject-hooks
 tornado==6.3.2
     # via livereload
 urllib3==2.0.2
