--- a/requirements.txt
+++ b/requirements.txt
@@ -62,9 +62,12 @@ sphinx==6.2.1
     #   -r requirements.in
     #   myst-parser
     #   sphinx-autobuild
+    #   sphinx-reredirects
     #   sphinx-rtd-theme
     #   sphinxcontrib-jquery
 sphinx-autobuild==2021.3.14
+    # via -r requirements.in
+sphinx-reredirects==0.1.3
     # via -r requirements.in
 sphinx-rtd-theme==1.2.0
     # via -r requirements.in
