--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,97 +4,105 @@
 #
 #    pip-compile requirements-dev.in
 #
-alabaster==0.7.13
+alabaster==0.7.16
     # via sphinx
-babel==2.12.1
+babel==2.14.0
     # via sphinx
-build==0.10.0
+build==1.2.1
     # via pip-tools
-certifi==2023.5.7
+certifi==2024.2.2
     # via requests
-charset-normalizer==3.1.0
+charset-normalizer==3.3.2
     # via requests
-click==8.1.3
+click==8.1.7
     # via pip-tools
 colorama==0.4.6
     # via sphinx-autobuild
-docutils==0.18.1
+docutils==0.20.1
     # via
     #   myst-parser
     #   sphinx
     #   sphinx-rtd-theme
-idna==3.4
+idna==3.6
     # via requests
 imagesize==1.4.1
     # via sphinx
-jinja2==3.1.2
+jinja2==3.1.3
     # via
     #   myst-parser
     #   sphinx
 livereload==2.6.3
     # via sphinx-autobuild
-markdown-it-py==2.2.0
+markdown-it-py==3.0.0
     # via
     #   mdit-py-plugins
     #   myst-parser
-markupsafe==2.1.2
+markupsafe==2.1.5
     # via jinja2
-mdit-py-plugins==0.3.5
+mdit-py-plugins==0.4.0
     # via myst-parser
 mdurl==0.1.2
     # via markdown-it-py
-myst-parser==1.0.0
+myst-parser==2.0.0
     # via -r requirements.in
-packaging==23.1
+packaging==24.0
     # via
     #   build
     #   sphinx
-pip-tools==6.13.0
+pip-tools==7.4.1
     # via -r requirements-dev.in
-pygments==2.15.1
+pygments==2.17.2
     # via sphinx
 pyproject-hooks==1.0.0
-    # via build
-pyyaml==6.0
+    # via
+    #   build
+    #   pip-tools
+pyyaml==6.0.1
     # via myst-parser
-requests==2.30.0
+requests==2.31.0
     # via sphinx
 six==1.16.0
     # via livereload
 snowballstemmer==2.2.0
     # via sphinx
-sphinx==6.2.1
+sphinx==7.2.6
     # via
     #   -r requirements.in
     #   myst-parser
     #   sphinx-autobuild
+    #   sphinx-reredirects
     #   sphinx-rtd-theme
     #   sphinxcontrib-jquery
-sphinx-autobuild==2021.3.14
+sphinx-autobuild==2024.2.4
     # via -r requirements.in
-sphinx-rtd-theme==1.2.0
+sphinx-reredirects==0.1.3
     # via -r requirements.in
-sphinxcontrib-applehelp==1.0.4
+sphinx-rtd-theme==2.0.0
+    # via -r requirements.in
+sphinxcontrib-applehelp==1.0.8
     # via sphinx
-sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-devhelp==1.0.6
     # via sphinx
-sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-htmlhelp==2.0.5
     # via sphinx
 sphinxcontrib-jquery==4.1
     # via sphinx-rtd-theme
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
-sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-qthelp==1.0.7
     # via sphinx
-sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-serializinghtml==1.1.10
     # via sphinx
 tomli==2.0.1
-    # via build
-tornado==6.3.2
+    # via
+    #   build
+    #   pip-tools
+    #   pyproject-hooks
+tornado==6.4
     # via livereload
-urllib3==2.0.2
+urllib3==2.2.1
     # via requests
-wheel==0.40.0
+wheel==0.43.0
     # via pip-tools
 
 # The following packages are considered to be unsafe in a requirements file:
