--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,18 @@
 #
 alabaster==0.7.16
     # via sphinx
+anyio==4.4.0
+    # via
+    #   starlette
+    #   watchfiles
 babel==2.14.0
     # via sphinx
 certifi==2024.2.2
     # via requests
 charset-normalizer==3.3.2
     # via requests
+click==8.1.7
+    # via uvicorn
 colorama==0.4.6
     # via sphinx-autobuild
 docutils==0.20.1
@@ -19,27 +25,31 @@ docutils==0.20.1
     #   myst-parser
     #   sphinx
     #   sphinx-rtd-theme
+exceptiongroup==1.2.2
+    # via anyio
+h11==0.14.0
+    # via uvicorn
 idna==3.6
-    # via requests
+    # via
+    #   anyio
+    #   requests
 imagesize==1.4.1
     # via sphinx
 jinja2==3.1.3
     # via
     #   myst-parser
     #   sphinx
-livereload==2.6.3
-    # via sphinx-autobuild
 markdown-it-py==3.0.0
     # via
     #   mdit-py-plugins
     #   myst-parser
 markupsafe==2.1.5
     # via jinja2
-mdit-py-plugins==0.4.0
+mdit-py-plugins==0.4.1
     # via myst-parser
 mdurl==0.1.2
     # via markdown-it-py
-myst-parser==2.0.0
+myst-parser==4.0.0
     # via -r requirements.in
 packaging==24.0
     # via sphinx
@@ -49,11 +59,11 @@ pyyaml==6.0.1
     # via myst-parser
 requests==2.31.0
     # via sphinx
-six==1.16.0
-    # via livereload
+sniffio==1.3.1
+    # via anyio
 snowballstemmer==2.2.0
     # via sphinx
-sphinx==7.2.6
+sphinx==7.4.7
     # via
     #   -r requirements.in
     #   myst-parser
@@ -61,9 +71,9 @@ sphinx==7.2.6
     #   sphinx-reredirects
     #   sphinx-rtd-theme
     #   sphinxcontrib-jquery
-sphinx-autobuild==2024.2.4
+sphinx-autobuild==2024.4.16
     # via -r requirements.in
-sphinx-reredirects==0.1.3
+sphinx-reredirects==0.1.5
     # via -r requirements.in
 sphinx-rtd-theme==2.0.0
     # via -r requirements.in
@@ -81,7 +91,19 @@ sphinxcontrib-qthelp==1.0.7
     # via sphinx
 sphinxcontrib-serializinghtml==1.1.10
     # via sphinx
-tornado==6.4
-    # via livereload
+starlette==0.38.2
+    # via sphinx-autobuild
+tomli==2.0.1
+    # via sphinx
+typing-extensions==4.12.2
+    # via
+    #   anyio
+    #   uvicorn
 urllib3==2.2.1
     # via requests
+uvicorn==0.30.6
+    # via sphinx-autobuild
+watchfiles==0.23.0
+    # via sphinx-autobuild
+websockets==13.0
+    # via sphinx-autobuild
