Update github action to push on tags.

--- a/.github/workflows/build-static-html.yml
+++ b/.github/workflows/build-static-html.yml
@@ -1,8 +1,9 @@
 name: Build API Documentation
 run-name: Build the static html files for API documenation.
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - *
 jobs:
   build:
     runs-on: ubuntu-latest
