--- a/.github/workflows/build-static-html.yml
+++ b/.github/workflows/build-static-html.yml
@@ -31,7 +31,7 @@ jobs:
     env:
       IMAGE_NAME: dataset-api-docs
       HARBOR_PROJECT: dataset-api-docs
-      TAG: ${{ github.event.release.tag_name }}
+      TAG: ${{ github.ref_name }}
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
