--- a/.github/workflows/synch-pr-branches.yml
+++ b/.github/workflows/synch-pr-branches.yml
@@ -7,17 +7,12 @@ jobs:
   sync_prs_to_internal_codebase:
     name: GitHub PR to Internal Codebase Sync
     runs-on: ubuntu-latest
-    if: (github.event.label.name == 'PR-Sync-Merge')   ||
-        (github.event.label.name == 'PR-Sync-Rebase')  ||
-        (github.event.label.name == 'PR-Sync-Update')
+    if: github.event.label.name == 'PR-Sync-Merge'
     steps:
       - uses: actions/checkout@v4
-
       - name: Sync approved PRs to internal codebase
-        uses: espressif/sync-pr-to-gitlab@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITLAB_URL: ${{ secrets.GITLAB_URL }}
-          GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
-          GIT_CONFIG_NAME: ${{ secrets.GIT_CONFIG_NAME }}
-          GIT_CONFIG_EMAIL: ${{ secrets.GIT_CONFIG_EMAIL }}
+        uses: keninkujovic/gitlab-sync@2.1.0
+        with:
+          gitlab_url: ${{ secrets.GITLAB_URL }}
+          gitlab_pat: ${{ secrets.GITLAB_TOKEN }}
+          username: ${{ secrets.GIT_CONFIG_NAME }}
