--- a/.github/workflows/synch-pr-branches.yml
+++ b/.github/workflows/synch-pr-branches.yml
@@ -19,7 +19,7 @@ jobs:
           export GIT_SSH_COMMAND='ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
           gitlab_repo_url=$GITLAB_URL
           gitlab_repo_url=${gitlab_repo_url#https://}
-          gitlab_repo_url_with_credentials="https://${GITLAB_USERNAME}:${GITLAB_PAT@}${gitlab_repo_url}"
+          gitlab_repo_url_with_credentials="https://${GITLAB_USERNAME}:${GITLAB_PAT}@${gitlab_repo_url}"
           git remote add gitlab "$gitlab_repo_url_with_credentials"
           git push gitlab $GITHUB_REF_NAME
         shell: bash
