--- a/.github/workflows/synch-pr-branches.yml
+++ b/.github/workflows/synch-pr-branches.yml
@@ -22,6 +22,6 @@ jobs:
           gitlab_repo_url_with_credentials="https://${GITLAB_USERNAME}:${GITLAB_PAT}@${gitlab_repo_url}"
           git remote add gitlab "$gitlab_repo_url_with_credentials"
           echo "Source branch: ${{ github.head_ref }}"
-          git push gitlab ${{ github.head_ref }}
+          git push gitlab ${{ github.head_ref }} --force
         shell: bash
 
