--- a/.github/workflows/synch-pr-branches.yml
+++ b/.github/workflows/synch-pr-branches.yml
@@ -10,6 +10,8 @@ jobs:
     if: github.event.label.name == 'PR-Sync-Merge'
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Sync approved PRs to internal codebase
         env:
           GITLAB_URL: ${{ secrets.GITLAB_URL }}
@@ -21,6 +23,8 @@ jobs:
           gitlab_repo_url=${gitlab_repo_url#https://}
           gitlab_repo_url_with_credentials="https://${GITLAB_USERNAME}:${GITLAB_PAT}@${gitlab_repo_url}"
           git remote add gitlab "$gitlab_repo_url_with_credentials"
-          git push gitlab $GITHUB_REF_NAME
+          echo "Source branch: ${{ github.head_ref }}"
+          git switch ${{ github.head_ref }}
+          git push gitlab ${{ github.head_ref }} --force
         shell: bash
 
